# OpenSubdiv

examples/: CMakeLists.txt
examples/common/: framebuffer.glsl  hud.cpp  ssao_mac.glsl  stopwatch.h
examples/glViewer/: glViewer.cpp  shader.glsl
examples/mayaEsonIO/: CMakeLists.txt  hbrMeshToEson.h  hbrMeshToEson.inl  main.cpp  mayaEsonIO.cpp  mayaEsonIO.h  mayaEsonReader.cpp  mayaEsonReader.h  mayaEsonWriter.cpp  mayaEsonWriter.h  mayaFVarDataDesc.h  mayaMeshToHbrMesh.h  mayaMeshToHbrMesh.inl  simpleVertexXYZ.h
examples/osd2eson/: CMakeLists.txt  bezier.cpp  bezier.h  eson.h  main.cpp
examples/raytrace/: CMakeLists.txt  bezier.cpp  bezier.h  bezierTest.cpp  bezier_patch.hpp  bezier_patch_intersection.cpp  bezier_patch_intersection.h  bilinear_patch_intersection.cpp  bilinear_patch_intersection.h  bounded_intersection.h  bvh_accel.cpp  bvh_accel.h  bvh_composite_intersection.cpp  bvh_composite_intersection.h  camera.cpp  camera.h  car.mtl  clKernel.cl  clTracer.cpp  clTracer.h  common.h  composite_intersection.h  context.h  convert_bezier.cpp  convert_bezier.h  init_shapes.h  intersection.h  main.cpp  matrix.cpp  matrix.h  matrix3.h  matrix4.h  mesh.cpp  mesh.h  patch_accel.cpp  patch_accel.h  ray.h  raydiff.cpp  raydiff.h  scene.cpp  (+7 more)
examples/raytrace/bezier/: bezier.h  bezierIntersect.h  bilinearIntersect.h  math.h  math_sse.h
examples/raytrace/osdutil/: bezier.h  bezierIntersect.h  bilinearIntersect.h  math.h  math_sse.h
examples/raytrace/tmp/: intersection.h  ray.cpp
opensubdiv/far/: meshFactory.h  patchParam.h  patchTables.cpp  patchTables.h  patchTablesFactory.cpp  patchTablesFactory.h  topologyRefiner.h  vertexEditTablesFactory.h
opensubdiv/vtr/: refinement.cpp
regression/common/: shape_utils.cpp  shape_utils.h
regression/shapes/: catmark_extraordinary.h
tutorials/far/: CMakeLists.txt
